# progressive-claude-system-prompt-mcp

./: README.md  files-artifacts.md  index.json  pyproject.toml  session-context.md  worker.js  wrangler.jsonc
.github/workflows/: deploy.yml
communication/: collaboration.json  collaboration.md  output-standards.json  output-standars.md  persistent-problems.json  response-gate.json  response-gate.md
operations/: files-artifacts.json  session-context.json
project-management/: claude-personal-notes.json  plans-tasks-decisions.json  session-start.json  session.start.md
project-management/templates/: decisions-date-label.json  decisions-date-label.md  plans-date-label.json  plans-date-label.md  task-date-label.json  task-date-label.md
src/: server.py
