[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "progressive-claude-system-prompt-mcp"
version = "0.1.0"
description = "Progressive Claude system prompt MCP server — Cloudflare Python Worker"
requires-python = ">=3.12"

# Runtime dependency — all retrieval logic uses only stdlib.
# mcp core provides FastMCP + the streamable-http ASGI transport.
# Do NOT use mcp[cli] — the CLI extras (uvicorn, typer, rich,
# cryptography) are unnecessary on Workers and some have C bindings
# incompatible with the Pyodide/WebAssembly runtime.
dependencies = [
    "mcp>=1.6.0",
]

[project.scripts]
progressive-prompt = "src.server:main"

# Dev dependencies — pywrangler CLI is provided by workers-py.
# workers-runtime-sdk provides the cloudflare.workers module for type hints.
# https://developers.cloudflare.com/workers/languages/python/packages/
[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
